--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,9 @@
 <body>
 <h2>ログイン</h2>
 <form th:action="@{/login}" method="post">
+    <!-- CSRFトークンを挿入 -->
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+    
     <div>
         <label>ユーザー名:</label>
         <input type="text" name="username" />
