--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,4 +1,3 @@
-<!-- src/main/resources/templates/register.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -7,6 +6,9 @@
 <body>
     <h2>ユーザー登録</h2>
     <form th:action="@{/register}" method="post" th:object="${user}">
+        <!-- CSRFトークンを挿入 -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
         <label>ユーザー名: <input type="text" th:field="*{username}" /></label><br/>
         <label>パスワード: <input type="password" th:field="*{password}" /></label><br/>
         <label>ロール:
