--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 <h2>ログイン</h2>
+
+<!-- エラーメッセージの表示 -->
+<div th:if="${param.error}">
+    <p style="color: red;">ユーザー名またはパスワードが間違っています</p>
+</div>
+<div th:if="${param.logout}">
+    <p style="color: green;">ログアウトしました</p>
+</div>
 <form th:action="@{/login}" method="post">
     <!-- CSRFトークンを挿入 -->
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
