--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,12 +5,16 @@
 </head>
 <body>
     <h2>ユーザー登録</h2>
+	<div th:if="${errorMessage}" style="color:red;">
+	    <p th:text="${errorMessage}"></p>
+	</div>
     <form th:action="@{/register}" method="post" th:object="${user}">
         <!-- CSRFトークンを挿入 -->
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
         <label>ユーザー名: <input type="text" th:field="*{username}" /></label><br/>
         <label>パスワード: <input type="password" th:field="*{password}" /></label><br/>
+		<label>確認用パスワード: <input type="password" th:field="*{confirmPassword}" /></label><br/>
         <label>ロール:
             <select th:field="*{role}">
                 <option value="ROLE_STAFF">STAFF</option>
