ロール機能変更

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -38,7 +38,7 @@
                     <label class="form-label">ロール</label>
                     <select th:field="*{role}" class="form-select" required>
                         <option value="ROLE_STAFF">STAFF</option>
-                        <option value="ROLE_VIEWER">VIEWER</option>
+                        <option value="ROLE_USER">USER</option>
                     </select>
                 </div>
 
