--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,6 +34,10 @@
                 </div>
 
                 <button type="submit" class="btn btn-success w-100">ログイン</button>
+				
+				<div class="text-center mt-3">
+				    <a th:href="@{/register}">新規ユーザー登録はこちら</a>
+				</div>
             </form>
         </div>
     </div>
